# StockMarketPrediction-Project

./: .file  README.md  app_simple.py  config.toml  data_fetcher.py  ml_models.py  options_analysis.py  pyproject.toml  technical_indicators.py  utils.py
