[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "pandas-ta>=0.3.14b0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "streamlit>=1.47.0",
    "tensorflow>=2.14.0",
    "xgboost>=3.0.2",
    "yfinance>=0.2.65",
]
